--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,7 @@
           "options": {
             "outputPath": "dist/billio-v2",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "browser": "src/main.ts",  // Kept as "browser"
             "polyfills": [
               "zone.js"
             ],
@@ -32,12 +32,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
